--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,7 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
-			<nav>
-	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/blog">Blog</a></li>
-	    		</ul>
+			<nav
 			</nav>
 			<div class="container">
 			
@@ -22,6 +17,7 @@
 	    		<ul>
 	        		<li><a href="mailto:ceri@ceri-anne.co.uk">email</a></li>
 	        		<li><a href="https://github.com/ceri-anne">github.com/ceri-anne</a></li>
+				<li><a href="https://www.ceri-anne.co.uk">ceri-anne.co.uk</a></li>
 				</ul>
 			</footer>
 		</body>
